@@ -1,7 +1,10 @@
 package com.kenshoo.pl.entity.internal.audit;
 
 import com.google.common.collect.ImmutableList;
-import com.kenshoo.pl.entity.*;
+import com.kenshoo.pl.entity.ChangeContext;
+import com.kenshoo.pl.entity.CurrentEntityState;
+import com.kenshoo.pl.entity.EntityChange;
+import com.kenshoo.pl.entity.FinalEntityState;
 import com.kenshoo.pl.entity.audit.AuditRecord;
 import com.kenshoo.pl.entity.internal.EntityIdExtractor;
 import com.kenshoo.pl.entity.internal.audit.entitytypes.AuditedType;
@@ -14,12 +17,14 @@ import org.mockito.junit.MockitoJUnitRunner;
 
 import java.util.Collection;
 import java.util.List;
+import java.util.Map.Entry;
 import java.util.Optional;
 
 import static com.github.npathai.hamcrestopt.OptionalMatchers.isPresentAnd;
 import static com.kenshoo.pl.entity.ChangeOperation.DELETE;
 import static com.kenshoo.pl.entity.matchers.audit.AuditRecordMatchers.*;
 import static java.util.Collections.emptyList;
+import static java.util.Map.entry;
 import static org.hamcrest.CoreMatchers.allOf;
 import static org.junit.Assert.assertThat;
 import static org.mockito.Mockito.mock;
@@ -75,7 +80,7 @@ public class AuditRecordGeneratorImplForDeleteTest {
     public void generate_WithIdOnly_ShouldGenerateBasicData() {
         when(mandatoryFieldValuesGenerator.generate(finalState)).thenReturn(emptyList());
 
-        final Optional<? extends AuditRecord<AuditedType>> actualOptionalAuditRecord =
+        final Optional<? extends AuditRecord> actualOptionalAuditRecord =
             auditRecordGenerator.generate(cmd, changeContext, emptyList());
 
         assertThat(actualOptionalAuditRecord,
@@ -93,13 +98,13 @@ public class AuditRecordGeneratorImplForDeleteTest {
 
     @Test
     public void generate_WithMandatoryOnly_ShouldGenerateMandatoryFieldValues() {
-        final Collection<EntityFieldValue> expectedMandatoryFieldValues =
-            ImmutableList.of(new EntityFieldValue(NotAuditedAncestorType.NAME, ANCESTOR_NAME),
-                             new EntityFieldValue(NotAuditedAncestorType.DESC, ANCESTOR_DESC));
+        final Collection<Entry<String, ?>> expectedMandatoryFieldValues =
+            List.of(entry(NotAuditedAncestorType.NAME.toString(), ANCESTOR_NAME),
+                    entry(NotAuditedAncestorType.DESC.toString(), ANCESTOR_DESC));
 
         when(mandatoryFieldValuesGenerator.generate(finalState)).thenReturn(expectedMandatoryFieldValues);
 
-        final Optional<? extends AuditRecord<AuditedType>> actualOptionalAuditRecord =
+        final Optional<? extends AuditRecord> actualOptionalAuditRecord =
             auditRecordGenerator.generate(cmd, changeContext, emptyList());
 
         assertThat(actualOptionalAuditRecord,
@@ -111,9 +116,9 @@ public class AuditRecordGeneratorImplForDeleteTest {
     public void generate_WithChildRecordsOnly_ShouldGenerateChildRecords() {
         when(mandatoryFieldValuesGenerator.generate(finalState)).thenReturn(emptyList());
 
-        final List<AuditRecord<?>> childRecords = ImmutableList.of(mockChildRecord(), mockChildRecord());
+        final List<AuditRecord> childRecords = ImmutableList.of(mockChildRecord(), mockChildRecord());
 
-        final Optional<? extends AuditRecord<AuditedType>> actualOptionalAuditRecord =
+        final Optional<? extends AuditRecord> actualOptionalAuditRecord =
             auditRecordGenerator.generate(cmd, changeContext, childRecords);
 
         assertThat(actualOptionalAuditRecord,
@@ -123,15 +128,15 @@ public class AuditRecordGeneratorImplForDeleteTest {
 
     @Test
     public void generate_WithMandatoryAndChildRecords_ShouldGenerateMandatoryFieldValuesAndChildRecords() {
-        final Collection<EntityFieldValue> expectedMandatoryFieldValues =
-            ImmutableList.of(new EntityFieldValue(NotAuditedAncestorType.NAME, ANCESTOR_NAME),
-                             new EntityFieldValue(NotAuditedAncestorType.DESC, ANCESTOR_DESC));
+        final Collection<Entry<String, ?>> expectedMandatoryFieldValues =
+            List.of(entry(NotAuditedAncestorType.NAME.toString(), ANCESTOR_NAME),
+                    entry(NotAuditedAncestorType.DESC.toString(), ANCESTOR_DESC));
 
         when(mandatoryFieldValuesGenerator.generate(finalState)).thenReturn(expectedMandatoryFieldValues);
 
-        final List<AuditRecord<?>> childRecords = ImmutableList.of(mockChildRecord(), mockChildRecord());
+        final List<AuditRecord> childRecords = ImmutableList.of(mockChildRecord(), mockChildRecord());
 
-        final Optional<? extends AuditRecord<AuditedType>> actualOptionalAuditRecord =
+        final Optional<? extends AuditRecord> actualOptionalAuditRecord =
             auditRecordGenerator.generate(cmd, changeContext, childRecords);
 
         assertThat(actualOptionalAuditRecord,
@@ -141,7 +146,7 @@ public class AuditRecordGeneratorImplForDeleteTest {
                                       hasSameChildRecord(childRecords.get(1)))));
     }
 
-    private AuditRecord<?> mockChildRecord() {
+    private AuditRecord mockChildRecord() {
         return mock(AuditRecord.class);
     }
 }
